cai thien: #36343: fix group thao luan

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -135,7 +135,7 @@ flutter:
           style: italic
 
   assets:
-    - .env
+    - assets/.env
     - assets/lottie/
     - assets/images/
     - assets/fonts/
