--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -84,6 +84,7 @@ dependencies:
   firebase_analytics: ^9.3.6
   vibration: ^1.7.6
   flutter_datetime_picker: ^1.5.1
+  local_auth: ^2.1.6
   
 dependency_overrides:
   firebase_core_platform_interface: ^4.5.1
