--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+1
+version: 1.0.11+1
 
 environment:
   sdk: ">=2.16.0 <3.0.0"
@@ -58,15 +58,15 @@ dependencies:
   lottie: ^1.2.1
   shared_preferences: ^2.0.11
   json_annotation: ^4.4.0
-  retrofit: ^3.0.1
+  retrofit: ^3.3.1
   build_runner: ^2.1.7
   json_serializable: ^6.1.3
-  retrofit_generator: ^3.0.1+1
+  retrofit_generator:  4.2.0
   http: ^0.13.4
   meta: ^1.7.0
   shimmer: ^2.0.0
-  flutter_html: ^2.2.1
-  flutter_svg: ^0.23.0+1
+  flutter_html: ^3.0.0-alpha.6
+  flutter_svg: ^2.0.4
   grouped_list: ^4.2.0
   hexcolor: ^2.0.6
   image_picker: ^0.8.5
@@ -75,19 +75,25 @@ dependencies:
   flutter_masked_text2: ^0.9.1
   flutter_keyboard_visibility: ^5.4.0
   tiengviet: ^0.5.0
-  file_picker: ^4.6.1
+  file_picker: ^5.2.6
   dropdown_button2: 1.7.2
   syncfusion_flutter_datepicker: ^20.2.49
   firebase_messaging: ^11.4.4
   firebase_core: ^1.21.0
-  flutter_local_notifications: ^9.7.0 #IOS
+  flutter_local_notifications: ^13.0.0 #IOS
   firebase_analytics: ^9.3.6
   vibration: ^1.7.6
   flutter_datetime_picker: ^1.5.1
   local_auth: ^2.1.6
-  
+  permission_handler: ^10.2.0
+  rxdart: ^0.27.7
+  quiver: ^3.2.1
+  photo_view: ^0.14.0
+  dartx: ^1.1.0
+
+
 dependency_overrides:
-  firebase_core_platform_interface: ^4.5.1
+  firebase_core_platform_interface: 4.5.1
 
 dev_dependencies:
   flutter_test:
