--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -38,6 +38,9 @@
 	<array>
 		<string>fetch</string>
 		<string>remote-notification</string>
+		<string>external-accessory</string>
+        <string>processing</string>
+        <string>voip</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
