--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -60,8 +60,8 @@ android {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "vn.gen_crm"
         targetSdkVersion flutter.targetSdkVersion
-        versionCode 12
-        versionName "1.1.2"
+        versionCode 14
+        versionName "1.1.4"
         minSdkVersion 21
         multiDexEnabled true
     }
@@ -83,6 +83,15 @@ android {
     }
     buildTypes {
         release {
+                minifyEnabled true
+                proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+                signingConfig signingConfigs.release
+                debug {
+                    debuggable true
+                    jniDebuggable true
+                    minifyEnabled false
+                    proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+                }
             signingConfig signingConfigs.release
         }
     }
