--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -78,10 +78,10 @@ dependencies:
   file_picker: ^5.2.6
   dropdown_button2: 1.7.2
   syncfusion_flutter_datepicker: ^20.2.49
-  firebase_messaging: ^11.4.4
-  firebase_core: ^1.21.0
+  firebase_messaging: ^14.4.0
+  firebase_core: ^2.9.0
   flutter_local_notifications: ^13.0.0 #IOS
-  firebase_analytics: ^9.3.6
+  firebase_analytics: ^10.2.0
   vibration: ^1.7.6
   flutter_datetime_picker: ^1.5.1
   local_auth: ^2.1.6
@@ -94,11 +94,11 @@ dependencies:
     git:
       url: https://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@github.com/tel4vn/flutter-pitel-voip.git
       ref: main
-  flutter_callkit_incoming: ^1.0.3+3
+  flutter_callkit_incoming: any
 
 
 dependency_overrides:
-  firebase_core_platform_interface: 4.5.1
+  firebase_core_platform_interface: 4.5.2
 
 dev_dependencies:
   flutter_test:
