update lib call and delete api call

--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -3,21 +3,21 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>794334677094-800vifglnecq1fnhkln72u2ek6qbatjh.apps.googleusercontent.com</string>
+	<string>493769130126-6f65cd627b28gusvir61kcho9kpruods.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.794334677094-800vifglnecq1fnhkln72u2ek6qbatjh</string>
+	<string>com.googleusercontent.apps.493769130126-6f65cd627b28gusvir61kcho9kpruods</string>
 	<key>API_KEY</key>
-	<string>AIzaSyAYESvgps2kye_1Rj8cn_5TRuoexqdbFWM</string>
+	<string>AIzaSyC5kIvWJD26BGngdqDDFo8kdmPnjNKMBn0</string>
 	<key>GCM_SENDER_ID</key>
-	<string>794334677094</string>
+	<string>493769130126</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
 	<string>com.gencrm</string>
 	<key>PROJECT_ID</key>
-	<string>gen-crm</string>
+	<string>gen-crm-test</string>
 	<key>STORAGE_BUCKET</key>
-	<string>gen-crm.appspot.com</string>
+	<string>gen-crm-test.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -29,6 +29,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:794334677094:ios:171761c121eab7b18085a7</string>
+	<string>1:493769130126:ios:ee39263f921c7dd9bd09df</string>
 </dict>
 </plist>
