--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -58,10 +58,10 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "vn.gen_crm"
+        applicationId "vn.car_crm"
         targetSdkVersion flutter.targetSdkVersion
-        versionCode 11
-        versionName "1.1.1"
+        versionCode 1
+        versionName "1.0.0"
         minSdkVersion 21
         multiDexEnabled true
     }
