--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -3,21 +3,21 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>794334677094-800vifglnecq1fnhkln72u2ek6qbatjh.apps.googleusercontent.com</string>
+	<string>476014117271-n4nt418nd9sjlv20706i7mbivtd3b90g.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.794334677094-800vifglnecq1fnhkln72u2ek6qbatjh</string>
+	<string>com.googleusercontent.apps.476014117271-n4nt418nd9sjlv20706i7mbivtd3b90g</string>
 	<key>API_KEY</key>
-	<string>AIzaSyAYESvgps2kye_1Rj8cn_5TRuoexqdbFWM</string>
+	<string>AIzaSyAMS_Nc3IuLqJ0AT3z60qShKbfcFWUOiwg</string>
 	<key>GCM_SENDER_ID</key>
-	<string>794334677094</string>
+	<string>476014117271</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.gencrm</string>
+	<string>com.carcrm</string>
 	<key>PROJECT_ID</key>
-	<string>gen-crm</string>
+	<string>carcrm-57969</string>
 	<key>STORAGE_BUCKET</key>
-	<string>gen-crm.appspot.com</string>
+	<string>carcrm-57969.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -29,6 +29,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:794334677094:ios:171761c121eab7b18085a7</string>
+	<string>1:476014117271:ios:8178c58c3187dd540e04d2</string>
 </dict>
 </plist>
