--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -84,7 +84,7 @@ dependencies:
   firebase_analytics: ^10.2.0
   vibration: ^1.7.6
   flutter_datetime_picker: ^1.5.1
-  local_auth: ^2.1.6
+  local_auth: 2.1.6
   permission_handler: ^10.2.0
   rxdart: ^0.27.7
   quiver: ^3.2.1
@@ -101,6 +101,7 @@ dependencies:
 
 
 dependency_overrides:
+  local_auth_android: 1.0.21
   firebase_core_platform_interface: 4.5.2
 
 dev_dependencies:
