update android call done

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -100,6 +100,7 @@ dependencies:
   flutter_callkit_incoming: ^1.0.3+3
   geolocator: 9.0.2
   geocoding: 2.1.0
+  wakelock: ^0.6.2
 
 
 dependency_overrides:
