--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,20 +1,6 @@
 name: gen_crm
 description: A new Flutter application.
-
-# The following line prevents the package from being accidentally published to
-# pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
-
-# The following defines the version and build number for your application.
-# A version number is three numbers separated by dots, like 1.2.43
-# followed by an optional build number separated by a +.
-# Both the version and the builder number may be overridden in flutter
-# build by specifying --build-name and --build-number, respectively.
-# In Android, build-name is used as versionName while build-number used as versionCode.
-# Read more about Android versioning at https://developer.android.com/studio/publish/versioning
-# In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
-# Read more about iOS versioning at
-# https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
+publish_to: 'none'
 version: 1.0.11+1
 
 environment:
@@ -24,33 +10,18 @@ dependencies:
   flutter:
     sdk: flutter
 
-
-  cupertino_icons: ^1.0.2
   flutter_dotenv: ^5.0.2
   flutter_bloc: ^7.0.0
   keyboard_dismisser: ^2.0.0
   community_material_icon: ^5.9.55
   cached_network_image: ^3.2.0
-  carousel_slider: ^4.0.0
   formz: ^0.4.1
   equatable: ^2.0.3
   intl: ^0.17.0
-  toggle_switch: ^1.3.0
-  font_awesome_flutter: ^9.2.0
   double_back_to_close_app: ^2.1.0
-  pull_to_refresh: ^2.0.0
   url_launcher: ^6.0.17
-  bubble_tab_indicator: ^0.1.6
-  change_app_package_name: ^1.0.0
-  titled_navigation_bar: ^4.1.0
-  card_swiper: ^1.0.4
-  page_indicator: ^0.4.1
-  smooth_page_indicator: ^1.0.0+2
-  flutter_mobx: ^2.0.3+2
   nb_utils: ^4.4.10
   get: ^4.6.1
-  pin_code_fields: ^7.3.0
-#  android_intent: ^2.0.2
   get_it: ^7.2.0
   logger: ^1.1.0
   flash: ^2.0.3+1
@@ -64,15 +35,12 @@ dependencies:
   retrofit_generator:  4.2.0
   http: ^0.13.4
   meta: ^1.7.0
-  shimmer: ^2.0.0
   flutter_html: ^3.0.0-alpha.6
   flutter_svg: ^2.0.4
-  grouped_list: ^4.2.0
   hexcolor: ^2.0.6
   image_picker: ^0.8.5
   path_provider: ^2.0.9
   multi_select_flutter: ^4.1.2
-  flutter_masked_text2: ^0.9.1
   flutter_keyboard_visibility: ^5.4.0
   tiengviet: ^0.5.0
   file_picker: ^5.2.6
@@ -80,7 +48,7 @@ dependencies:
   syncfusion_flutter_datepicker: ^20.2.49
   firebase_messaging: ^14.4.0
   firebase_core: ^2.9.0
-  flutter_local_notifications: ^13.0.0 #IOS
+  flutter_local_notifications: ^13.0.0
   firebase_analytics: ^10.2.0
   vibration: ^1.7.6
   flutter_datetime_picker: ^1.5.1
@@ -104,15 +72,6 @@ dependencies:
 
 
 dependency_overrides:
-  connectivity_plus: 3.0.4
-  sqflite: 2.2.7
-  url_launcher_android: 6.0.27
-  device_info_plus: 8.2.0
-  path_provider_android: 2.0.25
-  shared_preferences_android: 2.1.2
-  image_picker_android: 0.8.6+7
-  flutter_plugin_android_lifecycle: 2.0.9
-  local_auth_android: 1.0.21
   firebase_core_platform_interface: 4.5.2
 
 dev_dependencies:
