update dialog and permisstion location

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,6 +71,7 @@ dependencies:
   wakelock: ^0.6.2
   flutter_expandable_fab: 1.7.1
   signature: 5.3.2
+  location: 4.4.0
 
 
 dependency_overrides:
