--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -67,5 +67,7 @@
     <string>This application requires location services to work</string>
     <key>NSLocationAlwaysUsageDescription</key>
     <string>This application requires location services to work</string>
+    <key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+    <string>This application requires location services to work</string>
 </dict>
 </plist>
