--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -4,8 +4,8 @@
 <dict>
 	<key>BGTaskSchedulerPermittedIdentifiers</key>
 	<array>
-    	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
-    </array>
+		<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
+	</array>
 	<key>CADisableMinimumFrameDurationOnPhone</key>
 	<true/>
 	<key>CFBundleDevelopmentRegion</key>
@@ -43,7 +43,7 @@
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>This application requires location services to work</string>
 	<key>NSMicrophoneUsageDescription</key>
-	<string>User to capture audio for image picker plugin</string>
+	<string>Use microphone to make calls</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>To choose user profile image</string>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
