--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,8 +74,8 @@ dependencies:
   location: 4.4.0
 
 
-dependency_overrides:
-  firebase_core_platform_interface: 4.5.2
+#dependency_overrides:
+#  firebase_core_platform_interface: 4.5.3
 
 dev_dependencies:
   flutter_test:
