--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,10 +58,10 @@ dependencies:
   lottie: ^1.2.1
   shared_preferences: ^2.0.11
   json_annotation: ^4.4.0
-  retrofit: ^3.0.1
+  retrofit: ^3.3.1
   build_runner: ^2.1.7
   json_serializable: ^6.1.3
-  retrofit_generator: ^3.0.1+1
+  retrofit_generator:  4.2.0
   http: ^0.13.4
   meta: ^1.7.0
   shimmer: ^2.0.0
@@ -86,7 +86,7 @@ dependencies:
   flutter_datetime_picker: ^1.5.1
   
 dependency_overrides:
-  firebase_core_platform_interface: ^4.5.1
+  firebase_core_platform_interface: 4.5.1
 
 dev_dependencies:
   flutter_test:
