--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,6 +72,7 @@ dependencies:
   flutter_expandable_fab: 1.7.1
   signature: 5.3.2
   location: 4.4.0
+  flutter_animate: ^4.1.1+1
 
 dev_dependencies:
   flutter_test:
