--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,6 +74,7 @@ dependencies:
   flutter_expandable_fab: 1.7.1
   signature: 5.3.2
   location: 4.4.0
+  pretty_dio_logger: any
 
 dev_dependencies:
   flutter_test:
