--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
   retrofit: ^3.3.1
   build_runner: ^2.1.7
   json_serializable: ^6.1.3
-  retrofit_generator:  4.2.0
+  retrofit_generator:  4.2.0 #flutter pub run build_runner build --delete-conflicting-outputs
   http: ^0.13.4
   meta: ^1.7.0
   flutter_html: ^3.0.0-alpha.6
