--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,6 +73,7 @@ dependencies:
   signature: 5.3.2
   location: 4.4.0
   pretty_dio_logger: any
+  flutter_webrtc: 0.9.17
 
 dev_dependencies:
   flutter_test:
