done fix đổi địa chỉ ứng dụng .version 2.3.0

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -33,7 +33,7 @@
 	<key>LSSupportsOpeningDocumentsInPlace</key>
 	<true/>
 	<key>NSCameraUsageDescription</key>
-	<string>To take user profile image</string>
+	<string>We need access to your camera to use Qrcode to scan codes to search.</string>
 	<key>NSFaceIDUsageDescription</key>
 	<string>using face id genCRM</string>
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
