--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,8 @@
 name: gen_crm
 description: A new Flutter application.
 publish_to: 'none'
-version: 2.2.0+220
+version: 2.2.1+221
+#versionNew
 
 environment:
   sdk: ">=2.16.0 <3.0.0"
