--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,7 +73,7 @@ dependencies:
   signature: 5.3.2
   location: 4.4.0
   pretty_dio_logger: any
-  flutter_webrtc: 0.9.17
+  flutter_webrtc: 0.9.17 #cách fix https://pub.dev/packages/flutter_pitel_voip
   currency_text_input_formatter:
 
 dev_dependencies:
