--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,10 +3,9 @@ description: A new Flutter application.
 publish_to: 'none'
 version: 2.3.3+233
 #versionNew
-#flutter/3.7.6
 
 environment:
-  sdk: ">=2.16.0 <3.0.0"
+  sdk: '>=3.1.0 <4.0.0'
 
 dependencies:
   flutter:
@@ -57,10 +56,7 @@ dependencies:
   quiver: ^3.2.1
   photo_view: ^0.14.0
   dartx: ^1.1.0
-  plugin_pitel:
-    git:
-      url: https://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@github.com/tel4vn/flutter-pitel-voip.git
-      ref: main
+  flutter_pitel_voip: ^1.0.7+6
   flutter_riverpod: ^2.3.4
   qr_code_scanner: ^1.0.1
   is_lock_screen: ^2.0.0
@@ -72,7 +68,7 @@ dependencies:
   signature: 5.3.2
   location: 4.4.0
   pretty_dio_logger: any
-  flutter_webrtc: 0.9.17 #cách fix https://pub.dev/packages/flutter_pitel_voip
+  flutter_webrtc: 0.9.40 #cách fix https://pub.dev/packages/flutter_pitel_voip
   watcher: 1.0.2
   currency_text_input_formatter:
 
