--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -58,7 +58,7 @@ android {
 
     defaultConfig {
         applicationId "vn.gen_crm"
-        targetSdkVersion flutter.targetSdkVersion
+        targetSdkVersion 33
         versionCode 233//versionNew
         versionName "2.3.3"
         minSdkVersion 21
