--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,10 +57,10 @@ dependencies:
   photo_view: ^0.14.0
   dartx: ^1.1.0
   flutter_pitel_voip: ^1.0.7+6
-  flutter_riverpod: ^2.3.4
+  flutter_riverpod: ^2.4.9
   qr_code_scanner: ^1.0.1
   is_lock_screen: ^2.0.0
-  flutter_callkit_incoming: ^1.0.3+3
+#  flutter_callkit_incoming: ^1.0.3+3
   geolocator: 9.0.2
   geocoding: 2.1.0
   wakelock: ^0.6.2
@@ -70,6 +70,8 @@ dependencies:
   pretty_dio_logger: any
   flutter_webrtc: 0.9.40 #cách fix https://pub.dev/packages/flutter_pitel_voip
   watcher: 1.0.2
+  flutter_easyloading: ^3.0.5
+  package_info_plus: ^3.1.2
   currency_text_input_formatter:
 
 dependency_overrides:
