--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: gen_crm
 description: A new Flutter application.
 publish_to: 'none'
-version: 2.3.8+238
+version: 2.3.9+239
 #versionNew
 
 environment:
@@ -73,6 +73,7 @@ dependencies:
   flutter_easyloading: ^3.0.5
   package_info_plus: ^3.1.2
   currency_text_input_formatter:
+  shimmer: ^3.0.0
 
 dependency_overrides:
   watcher: 1.1.0
