--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,6 +74,7 @@ dependencies:
   package_info_plus: ^3.1.2
   currency_text_input_formatter:
   shimmer: ^3.0.0
+  printing: ^5.12.0
 
 dependency_overrides:
   watcher: 1.1.0
