Thêm chức năng quản lý thanh toán trên mobile

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,6 +75,10 @@ dependencies:
   currency_text_input_formatter:
   shimmer: ^3.0.0
   printing: ^5.12.0
+  open_file: ^3.3.2
+  htmltopdfwidgets: ^1.0.3
+  flutter_pdfview: ^1.3.2
+  syncfusion_flutter_pdfviewer: 20.4.54
 
 dependency_overrides:
   watcher: 1.1.0
