--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: gen_crm
 description: A new Flutter application.
 publish_to: 'none'
-version: 2.5.7+257
+version: 2.5.8+258
 #versionNew
 
 environment:
@@ -75,9 +75,9 @@ dependencies:
   currency_text_input_formatter:
   shimmer: ^3.0.0
   printing: ^5.12.0
-  open_file: ^3.3.2
-  htmltopdfwidgets: ^0.0.1
-  flutter_pdfview: ^1.3.2
+#  open_file: ^3.3.2
+#  htmltopdfwidgets: ^0.0.1
+#  flutter_pdfview: ^1.3.2
   syncfusion_flutter_pdfviewer: 20.4.54
 
 dependency_overrides:
