--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -79,6 +79,7 @@ dependencies:
 #  htmltopdfwidgets: ^0.0.1
 #  flutter_pdfview: ^1.3.2
   syncfusion_flutter_pdfviewer: 20.4.54
+  html_unescape: ^2.0.0
 
 dependency_overrides:
   watcher: 1.1.0
