--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -80,6 +80,7 @@ dependencies:
 #  flutter_pdfview: ^1.3.2
   syncfusion_flutter_pdfviewer: 20.4.54
   html_unescape: ^2.0.0
+  carousel_slider: ^4.2.1
 
 dependency_overrides:
   watcher: 1.1.0
