fix bug done v:2.4.5

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -83,6 +83,7 @@ dependencies:
   carousel_slider: ^4.2.1
   camera: ^0.10.5+9
   path: ^1.8.3
+  widget_and_text_animator: ^1.1.5
 
 dependency_overrides:
   watcher: 1.1.0
