--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -59,8 +59,8 @@ android {
     defaultConfig {
         applicationId "vn.gen_crm"
         targetSdkVersion 34
-        versionCode 287//versionNew
-        versionName "2.8.7"
+        versionCode 288//#versionNew
+        versionName "2.8.8"
         minSdkVersion 21
         multiDexEnabled true
     }
