--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -85,6 +85,7 @@ dependencies:
   path: ^1.8.3
   widget_and_text_animator: ^1.1.5
   audioplayers: ^5.2.1
+  loading_animation_widget: ^1.3.0
 
 dependency_overrides:
   watcher: 1.1.0
